# A3DS

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml
A3DS/agents/raw_classes/: run_agents.py
A3DS/analysis/: agents.py
A3DS/data_pipeline/: Cargo.toml
A3DS/db/: neo4j.py
A3DS/notifications/: notifications.py
